vlib/v/checker/tests/multi_value_method_err.vv
fn (v (int, int)) f() {}
